--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^9.66.1",
     "@react-three/fiber": "^8.13.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^10.12.5",
+    "lucide-react": "^0.556.0",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.152.2",
     "use": "^3.1.1"
   },
